refactor/feat: 0.7 - beta-version Christmas release; huge bulk of content being added, made it +- craftable and passable through survival